# oaat

./: CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/oaat-cli/: Cargo.toml
crates/oaat-cli/src/: config.rs  main.rs
crates/oaat-controller/: Cargo.toml
crates/oaat-controller/src/: clock_responder.rs  discovery.rs  lib.rs  manager.rs  transport.rs  zone.rs
crates/oaat-core/: Cargo.toml
crates/oaat-core/src/: capability.rs  clock.rs  codec.rs  error.rs  fec.rs  format.rs  lib.rs  message.rs  session.rs  tls.rs  wire.rs
crates/oaat-endpoint/: Cargo.toml
crates/oaat-endpoint/src/: alsa_direct.rs  alsa_mixer.rs  audio_output.rs  discovery.rs  flac_decoder.rs  hal.rs  lib.rs  session.rs  sync.rs  transport.rs  web_ui.rs
crates/oaat-ffi/: Cargo.toml
crates/oaat-ffi/include/: oaat.h
crates/oaat-ffi/src/: lib.rs
crates/oaat-test/: Cargo.toml
crates/oaat-test/src/: main.rs
docker/: endpoint.toml
docs/: howto-rpi-endpoint.md  rfc.md
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: handshake.rs  pts_sync.rs
