[workspace]
resolver = "2"
members = [
    "crates/oaat-core",
    "crates/oaat-endpoint",
    "crates/oaat-controller",
    "crates/oaat-cli",
    "crates/oaat-test",
    "crates/oaat-ffi",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/renesenses/oaat"
homepage = "https://mozaiklabs.fr/docs/oaat"
authors = ["Bertrand Clech <renesenses@gmail.com>"]
keywords = ["audio", "streaming", "multiroom", "hifi", "protocol"]
categories = ["multimedia::audio", "network-programming"]

[workspace.dependencies]
oaat-core = { version = "0.1", path = "crates/oaat-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zerocopy = { version = "0.8", features = ["derive"] }
mdns-sd = "0.12"
cpal = "0.15"
ringbuf = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
hostname = "0.4"
clap = { version = "4", features = ["derive"] }
symphonia = { version = "0.5", features = ["flac"] }
toml = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tokio-rustls = "0.26"
rcgen = "0.13"
sha2 = "0.10"
