[package]
name = "oaat-cli"
description = "Tune Bridge — lightweight audio bridge for USB DACs (OAAT protocol)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "tune-bridge"
path = "src/main.rs"

[dependencies]
oaat-core = { workspace = true }
oaat-endpoint = { path = "../oaat-endpoint" }
oaat-controller = { path = "../oaat-controller" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
mdns-sd = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
hostname = { workspace = true }

[features]
default = ["web-ui"]
web-ui = ["oaat-endpoint/web-ui"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"
