[package]
name = "oaat-controller"
description = "Controller implementation for OAAT (Open Advanced Audio Transport)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oaat-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:tokio-rustls", "dep:rustls", "oaat-core/tls"]
