[package]
name = "oaat-core"
description = "Core types, wire format, and protocol messages for OAAT (Open Advanced Audio Transport)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"
rust-version = "1.85"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zerocopy = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
bitflags = "2"
rustls = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[features]
default = []
tls = ["dep:rustls", "dep:rcgen", "dep:sha2"]
