[package]
name = "oaat-endpoint"
description = "Endpoint SDK for OAAT (Open Advanced Audio Transport)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oaat-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }

[features]
default = ["audio-output"]
audio-output = ["dep:cpal", "dep:ringbuf"]
