[package]
name = "oaat-endpoint"
description = "Endpoint SDK for OAAT (Open Advanced Audio Transport)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
oaat-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
mdns-sd = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
hostname = { workspace = true }
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }

symphonia = { workspace = true, optional = true }
tokio-rustls = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }
hyper = { version = "1", features = ["http1", "server"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
http-body-util = { version = "0.1", optional = true }

[features]
default = ["audio-output", "flac", "tls", "web-ui"]
audio-output = ["dep:cpal", "dep:ringbuf"]
flac = ["dep:symphonia"]
tls = ["dep:tokio-rustls", "dep:rustls", "oaat-core/tls"]
web-ui = ["dep:hyper", "dep:hyper-util", "dep:http-body-util"]
