[package]
name = "oaat-ffi"
description = "C FFI bindings for the OAAT endpoint SDK"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
oaat-core = { workspace = true }
oaat-endpoint = { path = "../oaat-endpoint", default-features = false }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
